--- a/css/general/style.css
+++ b/css/general/style.css
@@ -1,3 +1,7 @@
+/* ------------------------------------------ */
+/* General styling */
+/* ------------------------------------------ */
+
 * {
     margin: 0;
     padding: 0;
@@ -5,38 +9,112 @@
 }
 
 body {
-    width: 100vw;
+    width: 100%;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #333333;
+    user-select: none;
 }
 
-/* ------------------------------------------ */
-/* Navbar styling */
-/* ------------------------------------------ */
-
-.nav-bar {
-    width: 80vw;
+.wrapper {
+    max-width: 85vw;
     margin: 0 auto;
-    padding: 15px 0;
+}
+
+.container {
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.flexing {
+    max-width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
-.home-logo .logo{
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
+.left {
+    width: 48%;
 }
 
-.navbar-nav{
+.right {
     width: 40%;
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
+    text-align: center;
 }
 
-.nav-link a{
-    text-decoration: none;
+/* ------------------------------------------ */
+/* Text styling */
+/* ------------------------------------------ */
+
+.san {
+    font-family: 'PT Sans', sans-serif;
+}
+
+.serif {
+    font-family: 'PT Serif', serif;
+}
+
+.san-bangla {
+    font-family: 'Noto Sans Bengali', sans-serif;
+}
+
+.serif-bangla {
+    font-family: 'Noto Serif Bengali', serif;
+}
+
+.large {
+    font-size: 2.5rem;
+}
+
+.medium {
+    font-size: 2rem;
+}
+
+.small {
     font-size: 1.2rem;
-    color: #0c0c0c;
-    font-weight: 700;
+    font-weight: 400;
+}
+
+.italic {
+    font-style: italic;
+}
+
+/* ------------------------------------------ */
+/* Components styling */
+/* ------------------------------------------ */
+
+.button {
+    margin-top: 15px;
+    /* display: inline; */
+    width: fit-content;
+    padding: 12px 15px;
+    background-color: #343A40;
+    border-radius: 5px;
+}
+
+.button a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.categories {
+    padding-top: 12vh;
+    padding-bottom: 12vh;
+    padding-left: 2%;
+    padding-right: 2%;
+    border-radius: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 20px;
+}
+.category-card {
+    width: fit-content;
+    padding: 10px 18px;
+    border: 3px solid #FDD93D;
+    border-radius: 5px;
+}
+
+.category-card:hover {
+    box-shadow: 0 0 25px #FDD93D;
 }
