--- a/css/general/navbar.css
+++ b/css/general/navbar.css
@@ -1,15 +1,37 @@
-.navbar {
-    width: 100%;
-    margin: 8px auto;
-    background-color: #fff;
-    padding: 12px 10px;
-    transition: 0.6s;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.my-nav-bar {
+.navbar {
+    width: 100%;
+    margin: 12px auto;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #fff;
+    /* padding: 12px 10px; */
+    transition: 0.6s;
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.nav-link {
+    position: relative;
+    list-style: none;
+    margin: 1rem;
+}
+
+.navbar ul li a{
+    text-decoration: none;
+    font-size: 1.1rem;
+    color: #333333;
+    font-weight: 700;
+    padding: 1rem;
 }
 
 .home-logo .logo{
@@ -19,19 +41,22 @@
     transition: 0.6s;
 }
 
-.my-navbar-nav{
-    width: 40%;
-    list-style-type: none;
-    display: flex;
+.navbar-toggle {
+    width: 30px;
+    height: 21px;
+    position: absolute;
+    top: 0.7rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
     justify-content: space-between;
 }
 
-.my-nav-link a{
-    position: relative;
-    text-decoration: none;
-    font-size: 1.1rem;
-    color: #333333;
-    font-weight: 700;
+.navbar-toggle .bar {
+    height: 3px;
+    width: 100%;
+    background-color: #FDD93D;
+    border-radius: 10px;
 }
 
 .sticky {
@@ -47,4 +72,18 @@
     height: 60px;
     width: 60px;
     border-radius: 50%;
+}
+
+/* ------------------------------------------ */
+/* Responsive styling */
+/* ------------------------------------------ */
+
+@media (max-width: 980px) {
+    .navbar-toggle {
+        display: flex;
+    }
+
+    .navbar-links {
+        display: none;
+    }
 }
