--- a/css/general/style.css
+++ b/css/general/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    width: 100%;
+    width: 100vw;
     font-weight: 400;
     line-height: 1.6;
     color: #333333;
@@ -17,7 +17,7 @@ body {
 }
 
 .wrapper {
-    max-width: 85vw;
+    max-width: 90%;
     margin: 0 auto;
 }
 
