--- a/css/general/home.css
+++ b/css/general/home.css
@@ -14,7 +14,7 @@
     margin-bottom: 2vh;
     padding-top: 10vh;
     padding-bottom: 10vh;
-    padding-left: 5%;
+    padding-left: 7%;
     padding-right: 5%;
     border-radius: 10px;
     display: grid;
@@ -23,9 +23,9 @@
     align-items: center;
 }
 
-.profile-logo {
+.diary-logo{
     max-width: 100%;
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
 
 /* ------------------------------------------ */
