changing home style

--- a/css/general/style.css
+++ b/css/general/style.css
@@ -166,3 +166,9 @@ body {
         grid-template-columns: 1fr;
     }
 }
+
+@media (min-width: 1380px) {
+    .wrapper {
+        max-width: 80%;
+    }
+}
