--- a/css/general/home.css
+++ b/css/general/home.css
@@ -18,8 +18,8 @@
     padding-right: 5%;
     border-radius: 10px;
     display: grid;
-    grid-template-columns: 4fr 3fr;
-    grid-column-gap: 5px;
+    grid-template-columns: 4fr 2.5fr;
+    grid-column-gap: 5%;
     align-items: center;
 }
 
