Adding content on contact and about page

--- a/css/general/home.css
+++ b/css/general/home.css
@@ -9,7 +9,7 @@
 }
 
 .hero-section {
-    background-color: #FDD93D;
+    /* background-color: #FDD93D; */
     margin-top: 5vh;
     margin-bottom: 12vh;
     padding-top: 10vh;
