--- a/css/general/about.css
+++ b/css/general/about.css
@@ -6,10 +6,6 @@
     margin-top: 20px;
 }
 
-.lora {
-    font-family: 'Lora', serif;
-}
-
 .arrow {
     display: flex;
     flex-direction: column;
@@ -19,13 +15,14 @@
 }
 
 .down-arrow {
-    height: 100px;
-    width: 100px;
+    height: 70px;
+    width: 70px;
     cursor: pointer;
 }
 
 .basic-info {
     margin-top: 25px;
+    margin-bottom: 40px;
     height: 0;
     overflow: hidden;
     transition: 0.5s;
@@ -45,11 +42,12 @@
 
 blockquote {
     border-left: 5px solid #FDD93D;
+    margin-bottom: 20px;
 }
 
 .quote {
-    margin-left: 5px;
-    margin-top: 9px;
+    margin-left: 10px;
+    margin-top: 12px;
 }
 
 .footer {
@@ -58,4 +56,5 @@ blockquote {
     align-items: center;
     justify-content: center;
     margin-top: 40px;
+    margin-bottom: 40px;
 }
