--- a/css/general/style.css
+++ b/css/general/style.css
@@ -54,6 +54,10 @@ body {
     font-family: 'PT Serif', serif;
 }
 
+.lora {
+    font-family: 'Lora', serif;
+}
+
 .san-bangla {
     font-family: 'Noto Sans Bengali', sans-serif;
 }
@@ -149,6 +153,26 @@ body {
     background-color: #FDD93D;
     left: 0;
     bottom: -8px;
+}
+
+.line {
+    border-bottom: 2px solid #FDD93D;
+}
+
+.mt-3 {
+    margin-top: 30px;
+}
+
+.mt-2 {
+    margin-top: 20px;
+}
+
+.mb-3 {
+    margin-bottom: 30px;
+}
+
+.mb-4 {
+    margin-bottom: 40px;
 }
 
 /* ------------------------------------------ */
