changing some style

--- a/css/general/home.css
+++ b/css/general/home.css
@@ -10,7 +10,7 @@
 
 .hero-section {
     /* background-color: #FDD93D; */
-    margin-top: 5vh;
+    height: 80vh;
     margin-bottom: 12vh;
     padding-top: 10vh;
     padding-bottom: 10vh;
