--- a/css/general/about.css
+++ b/css/general/about.css
@@ -1,9 +1,10 @@
 .about-me {
+    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    /* margin-top: 30px; */
 }
 
 .arrow {
