--- a/css/general/style.css
+++ b/css/general/style.css
@@ -155,6 +155,14 @@ body {
     bottom: -8px;
 }
 
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
 .line {
     border-bottom: 2px solid #FDD93D;
 }
