--- a/css/general/style.css
+++ b/css/general/style.css
@@ -42,6 +42,15 @@ body {
     text-align: center;
 }
 
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
 /* ------------------------------------------ */
 /* Text styling */
 /* ------------------------------------------ */
