Aligning text center

--- a/css/general/style.css
+++ b/css/general/style.css
@@ -211,6 +211,10 @@ a {
     box-shadow: 0 0 10px #FDD93D;
 }
 
+.text-center {
+    text-align: center;
+}
+
 /* ------------------------------------------ */
 /* Responsive styling */
 /* ------------------------------------------ */
