--- a/css/general/style.css
+++ b/css/general/style.css
@@ -215,6 +215,10 @@ a {
     text-align: center;
 }
 
+.text-left {
+    text-align: left;
+}
+
 /* ------------------------------------------ */
 /* Responsive styling */
 /* ------------------------------------------ */
