--- a/css/general/about.css
+++ b/css/general/about.css
@@ -59,3 +59,12 @@ blockquote {
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
+@media (max-width: 680px) {
+    .about-me {
+        height: 100vh;
+    }
+    .show {
+        height: 60vh;
+    }
+}
