--- a/css/general/style.css
+++ b/css/general/style.css
@@ -181,12 +181,16 @@ a {
     border-bottom: 2px solid #FDD93D;
 }
 
-.mt-3 {
-    margin-top: 30px;
+.mt-1 {
+    margin-top: 10px;
 }
 
 .mt-2 {
     margin-top: 20px;
+}
+
+.mt-3 {
+    margin-top: 30px;
 }
 
 .mb-3 {
