--- a/css/general/about.css
+++ b/css/general/about.css
@@ -1,5 +1,7 @@
 .about-me {
-    height: 90vh;
+    height: fit-content;
+    margin-top: 12%;
+    margin-bottom: 12%;
     display: flex;
     flex-direction: column;
     align-items: center;
