Changing layout in mobile device

--- a/css/general/about.css
+++ b/css/general/about.css
@@ -64,7 +64,8 @@ blockquote {
 
 @media (max-width: 680px) {
     .about-me {
-        height: 100vh;
+        margin-top: 5%;
+        margin-bottom: 5%;
     }
     .show {
         height: 60vh;
