Change the blog section style in the home page

--- a/css/general/home.css
+++ b/css/general/home.css
@@ -23,9 +23,17 @@
     align-items: center;
 }
 
-.diary-logo{
+.diary-logo {
     max-width: 90%;
     /* border-radius: 50%; */
+}
+
+.blog-section {
+    height: 80vh;
+    margin-bottom: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 9%;
+    padding-right: 5%;
 }
 
 /* ------------------------------------------ */
