--- a/css/general/style.css
+++ b/css/general/style.css
@@ -81,16 +81,18 @@ a {
 }
 
 .large {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
 }
 
 .medium {
-    font-size: 2rem;
+    font-size: 1.8rem;
+    font-weight: 450;
 }
 
 .small {
-    font-size: 1.2rem;
+    font-size: 1.15rem;
     font-weight: 400;
+    text-align: justify;
 }
 
 .bold {
@@ -129,14 +131,15 @@ a {
 .categories {
     padding-top: 5vh;
     padding-bottom: 10vh;
-    padding-left: 2%;
-    padding-right: 2%;
-    border-radius: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
+    border-radius: 15px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 20px;
     row-gap: 20px;
 }
+
 .category-card {
     width: fit-content;
     padding: 10px 18px;
@@ -146,6 +149,19 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.card-inside {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-inside-img {
+    max-width: 50px;
+    max-height: 55px;
+    margin-right: 20px;
 }
 
 .category-card:hover {
@@ -195,6 +211,22 @@ a {
 .line-gap {
     width: 100%;
     height: 10px;
+}
+
+.pt-1 {
+    padding-top: 10px;
+}
+
+.pb-1 {
+    padding-bottom: 10px;
+}
+
+.pt-2 {
+    padding-top: 20px;
+}
+
+.pb-2 {
+    padding-bottom: 20px;
 }
 
 .mt-1 {
